--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -35,14 +35,18 @@
    },
    "outputs": [],
    "source": [
-    "# pip install lamindb,gseapy\n",
+    "# pip install lamindb gseapy\n",
     "!lamin init --storage ./use-cases-registries --modules bionty"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
@@ -69,7 +73,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "go_bp = gp.get_library(name=\"GO_Biological_Process_2025\", organism=\"Human\")\n",
@@ -79,7 +87,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "go_bp[\"ATF6-mediated Unfolded Protein Response (GO:0036500)\"]"
@@ -96,7 +108,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "def parse_ontology_id_from_keys(key):\n",
@@ -111,7 +127,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "go_bp_parsed = {\n",
@@ -123,7 +143,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "go_bp_parsed[\"GO:0036500\"]"
@@ -140,7 +164,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "source = bt.Source.get(name=\"go\")\n",
@@ -274,7 +302,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "symbols_genes = {record.symbol: record for record in genes}"
@@ -283,7 +315,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "for pathway in pathways:\n",
@@ -303,7 +339,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "pathway.genes.to_list(\"symbol\")"
@@ -312,7 +352,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "pathway.genes.to_list(\"ensembl_gene_id\")"
