--- a/docs/arc-virtual-cell-atlas.ipynb
+++ b/docs/arc-virtual-cell-atlas.ipynb
@@ -41,7 +41,7 @@
    },
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[gcp]',bionty,pertdb\n",
+    "# pip install 'lamindb[gcp,bionty,pertdb]'\n",
     "!lamin init --modules bionty,pertdb --storage ./test-arc-virtual-cell-atlas"
    ]
   },
@@ -620,7 +620,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311",
+   "display_name": "lamindb",
    "language": "python",
    "name": "python3"
   },
@@ -634,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.8"
   },
   "nbproject": {
    "id": "5FUyJ6RkVk0D",
