📝 Re-polish ontology guides (#236)
Signed-off-by: Lukas Heumos <lukas.heumos@posteo.net>

--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -12,7 +12,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "!lamin connect use-cases-registries"
@@ -21,10 +25,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "# pip install lamindb,scanpy,celltypist,gseapy\n",
+    "# pip install lamindb celltypist gseapy\n",
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "from lamin_usecases import datasets as ds\n",
@@ -52,7 +60,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "adata = ds.anndata_seurat_ifnb(preprocess=False, populate_registries=True)\n",
@@ -62,7 +74,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "sc.pp.normalize_total(adata, target_sum=1e4)\n",
@@ -96,7 +112,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "predictions = celltypist.annotate(\n",
@@ -108,7 +128,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "adata.obs[\"cell_type_celltypist\"] = bt.CellType.standardize(\n",
@@ -155,7 +179,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# compute differentially expressed genes\n",
@@ -182,7 +210,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "degs_up = rank_genes_groups_df[\n",
@@ -240,7 +272,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ln.Feature(name=\"cell_type_celltypist\", dtype=bt.CellType).save()\n",
@@ -274,7 +310,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "artifact = ln.Artifact.from_anndata(\n",
@@ -302,7 +342,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "schema_degs_up = ln.Schema.from_values(\n",
@@ -329,7 +373,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "def parse_ontology_id_from_enrichr_results(key):\n",
@@ -367,7 +415,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "schema_degs_up.pathways.set(enr_up_top10_pathways)\n",
@@ -441,7 +493,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ln.Artifact.filter(feature_sets__pathways__name__icontains=\"interferon-beta\").first()"
@@ -457,7 +513,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "pathway = bt.Pathway.get(ontology_id=\"GO:0035456\")\n",
@@ -467,7 +527,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "degs = ln.Schema.get(pathways__ontology_id=pathway.ontology_id)"
@@ -483,7 +547,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "contributing_genes = pathway.genes.all() & degs.genes.all()\n",
@@ -493,7 +561,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "# clean up test instance\n",
